Add a connection timeout parameter in the prop file

--- a/src/main/resources/application.properties.example
+++ b/src/main/resources/application.properties.example
@@ -2,5 +2,6 @@ biosamples.api.page.size = 50
 biosamples.api.root      = https://www.ebi.ac.uk/biosamples/api
 
 # Error handling information
-resource.max.error       = 2
+resource.max.error       = 10
+connection.timeout       = 10
 
